ICE-4221 Fixed alignment problems in menu items.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
@@ -1705,6 +1705,8 @@ table.iceSelInpDate tbody tr td table{
 }
 
 .iceMnuItmLabel {
+    padding-top: 0;
+    padding-bottom: 0;
     padding-left: 7px;
     font-weight: normal;
 }
@@ -1722,6 +1724,10 @@ table.iceSelInpDate tbody tr td table{
 
 .iceMnuItmImage, .iceMnuBarItemImage, .iceMnuBarVrtItemImage {
     display: inline;
+}
+
+.iceMnuItmImage, .iceMnuItmLabel {
+    vertical-align: middle;
 }
 
 .iceMnuBarSubMenuInd {
